# esphome-audio-stack

./: .gitignore  README.md  SOURCE.md  THIRD_PARTY_NOTICES.md
docs/: esp_aec.rst  esp_afe.rst  esp_audio_stack.rst
docs/esphome.io/components/: esp_aec.mdx  esp_afe.mdx  esp_audio_stack.mdx
docs/microphone/: esp_audio_stack.rst
docs/speaker/: esp_audio_stack.rst
esphome/components/esp_aec/: README.md  __init__.py  esp_aec.cpp  esp_aec.h
esphome/components/esp_afe/: README.md  __init__.py  binary_sensor.py  esp_afe.cpp  esp_afe.h  sensor.py  switch.py
esphome/components/esp_afe/idf_components/gmf_ai_audio/: CMakeLists.txt  idf_component.yml
esphome/components/esp_afe/idf_components/gmf_ai_audio/include/: esp_gmf_aec.h  esp_gmf_afe.h  esp_gmf_afe_manager.h  esp_gmf_ai_audio_methods.h  esp_gmf_doa.h  esp_gmf_ns.h  esp_gmf_vad.h  esp_gmf_wn.h
esphome/components/esp_afe/idf_components/gmf_ai_audio/private_include/: esp_gmf_ch_sort.h
esphome/components/esp_afe/idf_components/gmf_ai_audio/src/: esp_gmf_aec.c  esp_gmf_afe.c  esp_gmf_afe_manager.c  esp_gmf_doa.c  esp_gmf_ns.c  esp_gmf_vad.c  esp_gmf_wn.c
esphome/components/esp_audio_stack/: README.md  __init__.py  audio_core_audio_utils.h  audio_core_log_utils.cpp  audio_core_log_utils.h  audio_core_processor.h  audio_core_ring_buffer_caps.h  audio_core_scoped_lock.h  audio_core_task_utils.h  number.h  (+11 more)
examples/: 01-esp-audio-stack-only.yaml  02-esp-audio-stack-aec.yaml  03-esp-audio-stack-afe.yaml
tests/: test_audio_stack_cpp_contract.py  test_esp_afe_cpp_contract.py  test_upstream_readiness_contract.py
(+15 files in other folders)
